# sucks

./: .gitignore  README.md  pyproject.toml  test.yml
.github/workflows/: build_containers.yml  publish.yaml
containers/: Containerfile.amazon  Containerfile.centos  Containerfile.sles  Containerfile.ubuntu  Containerfile.ubuntu2404
src/sucks/: main.py  utils.py
src/sucks/commands/: __init__.py  _base.py  ci.py  destroy.py  run.py  setup.py  shell.py
src/sucks/models/: __init__.py  args.py  container_file.py
src/sucks/utils/: __init__.py  container.py  exceptions.py
tests/commands/: test_setup.py
tests/models/: test_container_file.py
tests/utils/: test_container.py
