[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "container-sucks"
dynamic = ["version"]
description = "A simple container management system for systemd-based containers, requires podman"
authors = [
    {name = "Keith Valin", email = "kvalin@redhat.com"}
]
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: System :: Systems Administration",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "PyYAML",
    "pydantic",
    "podman",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "ruff",
]

[project.scripts]
sucks = "sucks.main:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "sucks.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]